@@ -19,6 +19,7 @@
 package org.apache.hadoop.hive.ql.metadata;
 
 import java.io.IOException;
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -32,6 +33,7 @@ import java.util.Objects;
 import java.util.Properties;
 import java.util.Set;
 import java.util.stream.Collectors;
+
 
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -47,6 +49,7 @@ import org.apache.hadoop.hive.conf.HiveConf.ConfVars;
 import org.apache.hadoop.hive.metastore.HiveMetaStoreUtils;
 import org.apache.hadoop.hive.metastore.api.SourceTable;
 import org.apache.hadoop.hive.metastore.conf.MetastoreConf;
+import org.apache.hadoop.hive.metastore.HiveMetaHook;
 import org.apache.hadoop.hive.metastore.TableType;
 import org.apache.hadoop.hive.metastore.Warehouse;
 import org.apache.hadoop.hive.metastore.api.ColumnStatistics;
@@ -100,6 +103,7 @@ import static org.apache.hadoop.hive.serde.serdeConstants.VARIANT_TYPE_NAME;
  */
 public class Table implements Serializable {
 
+  @Serial
   private static final long serialVersionUID = 1L;
 
   static final private Logger LOG = LoggerFactory.getLogger("hive.ql.metadata.Table");
@@ -109,6 +113,7 @@ public class Table implements Serializable {
   /**
    * These fields are all cached fields.  The information comes from tTable.
    */
+  private List<FieldSchema> cachedPartCols;
   private transient Deserializer deserializer;
   private Class<? extends OutputFormat> outputFormatClass;
   private Class<? extends InputFormat> inputFormatClass;
@@ -193,6 +198,9 @@ public class Table implements Serializable {
 
     newTab.setMetaTable(this.getMetaTable());
     newTab.setSnapshotRef(this.getSnapshotRef());
+    if (this.cachedPartCols != null) {
+      newTab.cachedPartCols = new ArrayList<>(this.cachedPartCols);
+    }
     return newTab;
   }
 
@@ -225,11 +233,11 @@ public class Table implements Serializable {
     {
       sd.setSerdeInfo(new SerDeInfo());
       sd.setNumBuckets(-1);
-      sd.setBucketCols(new ArrayList<String>());
-      sd.setCols(new ArrayList<FieldSchema>());
-      sd.setParameters(new HashMap<String, String>());
-      sd.setSortCols(new ArrayList<Order>());
-      sd.getSerdeInfo().setParameters(new HashMap<String, String>());
+      sd.setBucketCols(new ArrayList<>());
+      sd.setCols(new ArrayList<>());
+      sd.setParameters(new HashMap<>());
+      sd.setSortCols(new ArrayList<>());
+      sd.getSerdeInfo().setParameters(new HashMap<>());
       // We have to use MetadataTypedColumnsetSerDe because LazySimpleSerDe does
       // not support a table with no columns.
       sd.getSerdeInfo().setSerializationLib(MetadataTypedColumnsetSerDe.class.getName());
@@ -239,17 +247,17 @@ public class Table implements Serializable {
       sd.setInputFormat(SequenceFileInputFormat.class.getName());
       sd.setOutputFormat(HiveSequenceFileOutputFormat.class.getName());
       SkewedInfo skewInfo = new SkewedInfo();
-      skewInfo.setSkewedColNames(new ArrayList<String>());
-      skewInfo.setSkewedColValues(new ArrayList<List<String>>());
-      skewInfo.setSkewedColValueLocationMaps(new HashMap<List<String>, String>());
+      skewInfo.setSkewedColNames(new ArrayList<>());
+      skewInfo.setSkewedColValues(new ArrayList<>());
+      skewInfo.setSkewedColValueLocationMaps(new HashMap<>());
       sd.setSkewedInfo(skewInfo);
     }
 
     org.apache.hadoop.hive.metastore.api.Table t = new org.apache.hadoop.hive.metastore.api.Table();
     {
       t.setSd(sd);
-      t.setPartitionKeys(new ArrayList<FieldSchema>());
-      t.setParameters(new HashMap<String, String>());
+      t.setPartitionKeys(new ArrayList<>());
+      t.setParameters(new HashMap<>());
       t.setTableType(TableType.MANAGED_TABLE.toString());
       t.setDbName(databaseName);
       t.setTableName(tableName);
@@ -402,7 +410,7 @@ public class Table implements Serializable {
     this.storageHandlerInfo = storageHandlerInfo;
   }
 
-  final public Class<? extends InputFormat> getInputFormatClass() {
+  public final Class<? extends InputFormat> getInputFormatClass() {
     if (inputFormatClass == null) {
       try {
         String className = tTable.getSd().getInputFormat();
@@ -422,7 +430,7 @@ public class Table implements Serializable {
     return inputFormatClass;
   }
 
-  final public Class<? extends OutputFormat> getOutputFormatClass() {
+  public final Class<? extends OutputFormat> getOutputFormatClass() {
     if (outputFormatClass == null) {
       try {
         String className = tTable.getSd().getOutputFormat();
@@ -456,7 +464,7 @@ public class Table implements Serializable {
    * Marker SemanticException, so that processing that allows for table validation failures
    * and appropriately handles them can recover from these types of SemanticExceptions
    */
-  public class ValidationFailureSemanticException extends SemanticException{
+  public static class ValidationFailureSemanticException extends SemanticException{
     public ValidationFailureSemanticException(String s) {
       super(s);
     }
@@ -526,9 +534,9 @@ public class Table implements Serializable {
     return Enum.valueOf(TableType.class, tTable.getTableType());
   }
 
-  public ArrayList<StructField> getFields() {
+  public List<StructField> getFields() {
 
-    ArrayList<StructField> fields = new ArrayList<StructField>();
+    List<StructField> fields = new ArrayList<>();
     try {
       Deserializer decoder = getDeserializer();
 
@@ -594,7 +602,7 @@ public class Table implements Serializable {
         && Objects.equals(snapshotRef, other.snapshotRef);
   }
 
-  public List<FieldSchema> getPartCols() {
+  private List<FieldSchema> getNativePartCols() {
     List<FieldSchema> partKeys = tTable.getPartitionKeys();
     if (partKeys == null) {
       partKeys = new ArrayList<>();
@@ -603,17 +611,38 @@ public class Table implements Serializable {
     return partKeys;
   }
 
+  /**
+   * Returns partition columns, consulting the storage handler for non-native tables (e.g. Iceberg)
+   * where partition columns are not stored in the metastore.
+   */
+  public List<FieldSchema> getPartCols() {
+    if (cachedPartCols != null) {
+      return cachedPartCols;
+    }
+    if (isTableTypeSet() && hasNonNativePartitionSupport()) {
+      cachedPartCols = getStorageHandler().getPartitionKeys(this);
+    } else {
+      cachedPartCols = getNativePartCols();
+    }
+    return cachedPartCols;
+  }
+
+  private boolean isTableTypeSet() {
+    if (tTable.getParameters() == null) {
+      return false;
+    }
+    String tableType = tTable.getParameters().get(HiveMetaHook.TABLE_TYPE);
+    return tableType != null;
+  }
+
   public FieldSchema getPartColByName(String colName) {
     return getPartCols().stream()
-      .filter(key -> key.getName().toLowerCase().equals(colName))
-      .findFirst().orElse(null);
+        .filter(key -> key.getName().toLowerCase().equals(colName))
+        .findFirst().orElse(null);
   }
 
   public List<String> getPartColNames() {
-    List<FieldSchema> partCols = hasNonNativePartitionSupport() ?
-        getStorageHandler().getPartitionKeys(this) : getPartCols();
-    return partCols.stream().map(FieldSchema::getName)
-      .collect(Collectors.toList());
+    return getPartCols().stream().map(FieldSchema::getName).toList();
   }
 
   public boolean hasNonNativePartitionSupport() {
@@ -671,7 +700,7 @@ public class Table implements Serializable {
     Map<List<String>, String> mappings = tTable.getSd().getSkewedInfo()
         .getSkewedColValueLocationMaps();
     if (null == mappings) {
-      mappings = new HashMap<List<String>, String>();
+      mappings = new HashMap<>();
       tTable.getSd().getSkewedInfo().setSkewedColValueLocationMaps(mappings);
     }
 
@@ -681,7 +710,7 @@ public class Table implements Serializable {
 
   public Map<List<String>, String> getSkewedColValueLocationMaps() {
     return (tTable.getSd().getSkewedInfo() != null) ? tTable.getSd().getSkewedInfo()
-        .getSkewedColValueLocationMaps() : new HashMap<List<String>, String>();
+        .getSkewedColValueLocationMaps() : new HashMap<>();
   }
 
   public void setSkewedColValues(List<List<String>> skewedValues) {
@@ -690,7 +719,7 @@ public class Table implements Serializable {
 
   public List<List<String>> getSkewedColValues(){
     return (tTable.getSd().getSkewedInfo() != null) ? tTable.getSd().getSkewedInfo()
-        .getSkewedColValues() : new ArrayList<List<String>>();
+        .getSkewedColValues() : new ArrayList<>();
   }
 
   public void setSkewedColNames(List<String> skewedColNames) {
@@ -699,7 +728,7 @@ public class Table implements Serializable {
 
   public List<String> getSkewedColNames() {
     return (tTable.getSd().getSkewedInfo() != null) ? tTable.getSd().getSkewedInfo()
-        .getSkewedColNames() : new ArrayList<String>();
+        .getSkewedColNames() : new ArrayList<>();
   }
 
   public SkewedInfo getSkewedInfo() {
@@ -728,7 +757,17 @@ public class Table implements Serializable {
   }
 
   public List<FieldSchema> getCols() {
-    return getColsInternal(false);
+    if (!isNonNative()) {
+      return getColsInternal(false);
+    }
+    List<FieldSchema> nonPartFields = new ArrayList<>();
+    Set<String> partFieldsName = getPartCols().stream().map(FieldSchema::getName).collect(Collectors.toSet());
+    for (FieldSchema field : getColsInternal(false)) {
+      if (!partFieldsName.contains(field.getName())) {
+        nonPartFields.add(field);
+      }
+    }
+    return nonPartFields;
   }
 
   public List<FieldSchema> getColsForMetastore() {
@@ -761,10 +800,9 @@ public class Table implements Serializable {
    * @return List&lt;FieldSchema&gt;
    */
   public List<FieldSchema> getAllCols() {
-    ArrayList<FieldSchema> f_list = new ArrayList<FieldSchema>();
-    f_list.addAll(getCols());
-    f_list.addAll(getPartCols());
-    return f_list;
+    ArrayList<FieldSchema> allCols = new ArrayList<>(getCols());
+    allCols.addAll(getPartCols());
+    return allCols;
   }
 
   public void setPartCols(List<FieldSchema> partCols) {
@@ -812,7 +850,7 @@ public class Table implements Serializable {
   }
   
   public boolean isPartitioned() {
-    return hasNonNativePartitionSupport() ? getStorageHandler().isPartitioned(this) : 
+    return hasNonNativePartitionSupport() ? getStorageHandler().isPartitioned(this) :
         CollectionUtils.isNotEmpty(getPartCols());
   }
 
@@ -1008,12 +1046,12 @@ public class Table implements Serializable {
    *          Use the information from this partition.
    * @return Partition name to value mapping.
    */
-  public LinkedHashMap<String, String> createSpec(
+  public Map<String, String> createSpec(
       org.apache.hadoop.hive.metastore.api.Partition tp) {
 
     List<FieldSchema> fsl = getPartCols();
     List<String> tpl = tp.getValues();
-    LinkedHashMap<String, String> spec = new LinkedHashMap<String, String>(fsl.size());
+    Map<String, String> spec = LinkedHashMap.newLinkedHashMap(fsl.size());
     for (int i = 0; i < fsl.size(); i++) {
       FieldSchema fs = fsl.get(i);
       String value = tpl.get(i);
